Fix skeltons in dark mode

--- a/packages/web/static/css/global.css
+++ b/packages/web/static/css/global.css
@@ -93,6 +93,7 @@
 /* --- Colors --- */
 
 body {
+    --fg-color: rgb(var(--fg-color-vs));
     --theme-color: rgb(var(--theme-color-vs));
 
     --modal-bg-color: rgba(0, 0, 0, 0.4);
@@ -110,7 +111,7 @@ body {
 }
 
 body {
-    --fg-color: #ffffff;
+    --fg-color-vs: 255, 255, 255;
     --bg-color: #f2f2f2;
 
     --theme-color-vs: 44, 102, 110;
@@ -178,7 +179,7 @@ body .render-dark {
 
 body.dark {
     --bg-color: #161616;
-    --fg-color: #2d2d2d;
+    --fg-color-vs: 45, 45, 45;
     --hover-color: #3a3a3a;
     --tab-hover-color: #232323;
 
@@ -251,7 +252,7 @@ body.dark .render-light {
 @media (prefers-color-scheme: dark) {
     body:not(.light) {
         --bg-color: #161616;
-        --fg-color: #2d2d2d;
+        --fg-color-vs: 45, 45, 45;
         --hover-color: #3a3a3a;
         --tab-hover-color: #232323;
         --theme-color-vs: 31, 76, 82;
